--- a/dota_analytics.ipynb
+++ b/dota_analytics.ipynb
@@ -7850,68 +7850,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialized empty Git repository in /Users/carroll/My Own Projects/Dota Analytics/.git/\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git init"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git config --local user.name \"Kiryl\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git config --local user.email musomania@protonmail.com"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch master\r\n",
-      "\r\n",
-      "No commits yet\r\n",
-      "\r\n",
-      "Untracked files:\r\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
-      "\r\n",
-      "\t\u001b[31m.ipynb_checkpoints/\u001b[m\r\n",
-      "\t\u001b[31mdota_analytics.ipynb\u001b[m\r\n",
-      "\r\n",
-      "nothing added to commit but untracked files present (use \"git add\" to track)\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git status"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 104,
    "metadata": {},
    "outputs": [],
@@ -7951,12 +7889,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master (root-commit) 52f8ccb] version 3.0\r\n",
+      " 1 file changed, 7983 insertions(+)\r\n",
+      " create mode 100644 dota_analytics.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit dota_analytics.ipynb -m\"version 3.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git commit dota_analytics.ipynb -m\"latest changes\""
+    "!git remote add origin https://github.com/carrollstreet/Dota-Analytics.git"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
